#1817 - fixed image jumpting out of menu

--- a/server/http-dashboard/app/components/Layout/components/UserLayout/styles.less
+++ b/server/http-dashboard/app/components/Layout/components/UserLayout/styles.less
@@ -137,11 +137,7 @@
   }
 
   &-unfold {
-    width: 192px;
-
-
     &-company-logo {
-      max-width: 100%;
       height: 64px;
       line-height: 64px;
 
